--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
+/target
+*.prefs
 *.class
+*.jsdtscope
+*.launch
+target
+./settings
+./.project
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+.settings
+.project
+.settings
+.project
+.settings
+.classpath
+.project
+.classpath
+.project
+.settings
+.settings
+.classpath
+/.idea
+/*.iml
 
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
