--- a/protoc-maven-plugin/pom.xml
+++ b/protoc-maven-plugin/pom.xml
@@ -3,8 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>01blog</groupId>
+        <artifactId>01blog</artifactId>
+        <version>0.0.1</version>
+    </parent>
     <groupId>01blog</groupId>
-    <artifactId>hello-maven-plugin</artifactId>
+    <artifactId>protoc-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Maven protobuf plugin</name>
@@ -16,6 +21,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
