--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -7,11 +7,38 @@
     <artifactId>sample</artifactId>
     <version>0.0.1</version>
 
+
     <dependencies>
         <dependency>
-            <groupId>01blog</groupId>
-            <artifactId>hello-maven-plugin</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.5.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>01blog</groupId>
+                <artifactId>protoc-maven-plugin</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <id>generate-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>protoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <protocCmd>protoc</protocCmd>
+                    <protocVersion>2.5.1</protocVersion>
+                    <sources>
+                        <param>${basedir}/src/main/java/protoc/person.proto</param>
+                    </sources>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
